--- a/StoreApp.Web/StoreApp.Web.csproj
+++ b/StoreApp.Web/StoreApp.Web.csproj
@@ -18,4 +18,9 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
+<Target Name="Build Angular" Condition="'$(Configuration)'=='Release'" BeforeTargets="Build">    
+   <Message Text="* * * * * * Building Angular App * * * * * *" Importance="high" />
+   <Exec Command="ng build -prod -aot" />
+</Target>
+
 </Project>
