alert and exception handler

--- a/StoreApp.Web/StoreApp.Web.csproj
+++ b/StoreApp.Web/StoreApp.Web.csproj
@@ -18,6 +18,10 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StoreApp.Util\StoreApp.Util.csproj" />
+  </ItemGroup>
+
 <Target Name="Build Angular" Condition="'$(Configuration)'=='Release'" BeforeTargets="Build">    
    <Message Text="* * * * * * Building Angular App * * * * * *" Importance="high" />
    <Exec Command="ng build -prod -aot" />
