build and api url adjustments

--- a/StoreApp.Web/StoreApp.Web.csproj
+++ b/StoreApp.Web/StoreApp.Web.csproj
@@ -22,9 +22,9 @@
     <ProjectReference Include="..\StoreApp.Util\StoreApp.Util.csproj" />
   </ItemGroup>
 
-<Target Name="Build Angular" Condition="'$(Configuration)'=='Release'" BeforeTargets="Build">    
-   <Message Text="* * * * * * Building Angular App * * * * * *" Importance="high" />
-   <Exec Command="ng build -prod -aot" />
+  <Target Name="Build Angular" Condition="'$(Configuration)'=='Release'" BeforeTargets="Build">
+    <Message Text="* * * * * * Building Angular App * * * * * *" Importance="high" />
+    <Exec Command="ng build" />
 </Target>
 
 </Project>
