--- a/StoreApp.Web/StoreApp.Web.csproj
+++ b/StoreApp.Web/StoreApp.Web.csproj
@@ -24,7 +24,7 @@
 
   <Target Name="Build Angular" Condition="'$(Configuration)'=='Release'" BeforeTargets="Build">
     <Message Text="* * * * * * Building Angular App * * * * * *" Importance="high" />
-    <Exec Command="ng build" />
+    <Exec Command="ng build --prod --aot" />
 </Target>
 
 </Project>
