--- a/StoreApp.Web/tsconfig.json
+++ b/StoreApp.Web/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": [ "./ClientApp", "./wwwroot" ],
+  "include": [ "./ClientAngularApp", "./wwwroot" ],
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./wwwroot/out-tsc",
