--- a/StoreApp.Domain.Entity/StoreApp.Domain.Entity.csproj
+++ b/StoreApp.Domain.Entity/StoreApp.Domain.Entity.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StoreApp.Infra\StoreApp.Infra.csproj" />
+  </ItemGroup>
+
 </Project>
