maps and dinamically DI

--- a/StoreApp.Domain.Map/StoreApp.Domain.Map.csproj
+++ b/StoreApp.Domain.Map/StoreApp.Domain.Map.csproj
@@ -5,12 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NHibernate" Version="5.1.2" />
+    <PackageReference Include="FluentNHibernate" Version="2.1.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\StoreApp.Domain.Entity\StoreApp.Domain.Entity.csproj" />
-    <ProjectReference Include="..\StoreApp.Infra\StoreApp.Infra.csproj" />
   </ItemGroup>
 
 </Project>
