--- a/StoreApp.Web/StoreApp.Web.csproj
+++ b/StoreApp.Web/StoreApp.Web.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\StoreApp.Domain.Entity\StoreApp.Domain.Entity.csproj" />
+    <ProjectReference Include="..\StoreApp.Domain.Map\StoreApp.Domain.Map.csproj" />
     <ProjectReference Include="..\StoreApp.Domain.Repository\StoreApp.Domain.Repository.csproj" />
     <ProjectReference Include="..\StoreApp.Infra\StoreApp.Infra.csproj" />
   </ItemGroup>
