--- a/StoreApp.Web/bundleconfig.json
+++ b/StoreApp.Web/bundleconfig.json
@@ -1,17 +1,7 @@
 ﻿[
   {
-    "inputFiles": [ "assets/css/bootstrap.3.3.7.css" ],
-    "outputFileName": "ClientAngularApp/assets/css/bootstrap.3.3.7.min.css",
-    "minify": { "enabled": true }
-  },
-  {
-    "inputFiles": [ "assets/js/jquery.2.1.3.js" ],
-    "outputFileName": "ClientAngularApp/assets/js/jquery.2.1.3.min.js",
-    "minify": { "enabled": true }
-  },
-  {
-    "inputFiles": [ "assets/js/bootstrap.3.3.7.js" ],
-    "outputFileName": "ClientAngularApp/assets/js/bootstrap.3.3.7.min.js",
+    "inputFiles": [ "assets/css/bootstrap.css" ],
+    "outputFileName": "ClientAngularApp/assets/css/bootstrap.min.css",
     "minify": { "enabled": true }
   }
 ]
