--- a/StoreApp.Web/Properties/launchSettings.json
+++ b/StoreApp.Web/Properties/launchSettings.json
@@ -2,8 +2,12 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost/storeapp",
+      "sslPort": 0
+    },
     "iisExpress": {
-      "applicationUrl": "http://localhost:50001/",
+      "applicationUrl": "http://localhost:5001/",
       "sslPort": 0
     }
   },
