--- a/StoreApp.Web/appsettings.json
+++ b/StoreApp.Web/appsettings.json
@@ -11,5 +11,8 @@
         "Default": "Warning"
       }
     }
+  },
+  "ConnectionStrings": {
+    "PostgreDevConnection": "User ID=postgres;Password=admin;Host=localhost;Port=5432;Database=store;"
   }
 }
