--- a/StoreApp.Web/appsettings.json
+++ b/StoreApp.Web/appsettings.json
@@ -13,6 +13,10 @@
     }
   },
   "ConnectionStrings": {
-    "PostgreDevConnection": "User ID=postgres;Password=admin;Host=localhost;Port=5432;Database=store;"
+    "ConnectionString": "User ID=postgres;Password=admin;Host=localhost;Port=5432;Database=store;"
+  },
+  "AssemblyNames": {
+    "Mapping": "StoreApp.Domain.Map.dll",
+    "Dependencies": [ "StoreApp.Domain.Repository.dll" ]
   }
 }
