improvements in configuration

--- a/StoreApp.Web/appsettings.json
+++ b/StoreApp.Web/appsettings.json
@@ -17,6 +17,7 @@
   },
   "AssemblyNames": {
     "Mapping": "StoreApp.Domain.Map.dll",
-    "Dependencies": [ "StoreApp.Domain.Repository.dll" ]
+    "Repository": "StoreApp.Domain.Repository.dll",
+    "Service": ""
   }
 }
