avoid ng on build vsts

--- a/StoreApp.Web/StoreApp.Web.csproj
+++ b/StoreApp.Web/StoreApp.Web.csproj
@@ -25,9 +25,9 @@
     <Folder Include="ClientAngularApp\assets\js\" />
   </ItemGroup>
 
-  <Target Name="Build Angular" Condition="'$(Configuration)'=='Release'" BeforeTargets="Build">
+  <!--<Target Name="Build Angular" Condition="'$(Configuration)'=='Release'" BeforeTargets="Build">
     <Message Text="* * * * * * Building Angular App * * * * * *" Importance="high" />
-    <Exec Command="ng build --prod --aot" />
-</Target>
+    <Exec Command="ng build -prod -aot" />
+  </Target>-->
 
 </Project>
