--- a/StoreApp.Web/appsettings.json
+++ b/StoreApp.Web/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    "ConnectionString": "User ID=postgres;Password=admin;Host=localhost;Port=5432;Database=store;"
+    "ConnectionString": "***REMOVED***"
   },
   "AssemblyNames": {
     "Mapping": "StoreApp.Domain.Map.dll",
