Fixed product map

--- a/StoreApp.Web/appsettings.json
+++ b/StoreApp.Web/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    "ConnectionString": "***REMOVED***"
+    "ConnectionString": "User ID=postgres@joelstoreappdbserver;Password=02050608Ab!;Host=joelstoreappdbserver.postgres.database.azure.com;Port=5432;Database=storeapp;"
   },
   "AssemblyNames": {
     "Mapping": "StoreApp.Domain.Map.dll",
