adjusted for error without login

--- a/StoreApp.Web/appsettings.Development.json
+++ b/StoreApp.Web/appsettings.Development.json
@@ -6,5 +6,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+
+  "ConnectionStrings": {
+    "ConnectionString": "Database=storeapp; Host=nit-postgre-server-dev.postgres.database.azure.com; User Id=nitadmin@nit-postgre-server-dev; Password=P@55w0rd"
   }
 }
