--- a/StoreApp.Web/appsettings.json
+++ b/StoreApp.Web/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    "ConnectionString": "User ID=postgres@joelstoreappdbserver;Password=02050608Ab!;Host=joelstoreappdbserver.postgres.database.azure.com;Port=5432;Database=storeapp;"
+    "ConnectionString": "Database=storeapp; Host=nit-postgre-server-dev.postgres.database.azure.com; User Id=nitadmin@nit-postgre-server-dev; Password=P@55w0rd"
   },
   "AssemblyNames": {
     "Mapping": "StoreApp.Domain.Map.dll",
