--- a/StoreApp.Web/appsettings.json
+++ b/StoreApp.Web/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    "ConnectionString": "Database=storeapp; Host=nit-postgre-server-dev.postgres.database.azure.com; User Id=nitadmin@nit-postgre-server-dev; Password=P@55w0rd"
+    "ConnectionString": "Database=storeapp; Host=xxxxxxxxxxxxxxxxxxxx; User Id=xxxxxxxx@xxxxxxxxxxxxxxxx; Password=xxxxxxxxxxxxxxxxx"
   },
   "AssemblyNames": {
     "Mapping": "StoreApp.Domain.Map.dll",
