--- a/StoreApp.Web/ClientAngularApp/tsconfig.app.json
+++ b/StoreApp.Web/ClientAngularApp/tsconfig.app.json
@@ -1,13 +1,15 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../wwwroot/out-tsc/app",
     "baseUrl": "./",
     "module": "es2015",
     "types": []
   },
+  "include": [
+    "../ClientAngularApp/**/*"
+  ],
   "exclude": [
-    "test.ts",
-    "**/*.spec.ts"
+    "**/*.spec.ts",
+    "**/*.test.ts"
   ]
 }
